--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/registrar-traslado-gbftrec/registrar-traslado-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/registrar-traslado-gbftrec/registrar-traslado-gbftrec.component.html
@@ -27,7 +27,7 @@
                 <strong> Justificación del traslado entre aportantes y fuentes del proyecto: </strong>
                 <span class="d-block">Se requiere el traslados ya que el aportante Gobernación de Boyacá No cuenta con los recursos necesarios y seran solventados por la Alcaldía de Susacón</span>
             </p>
-              <p><strong> Url con soporte: </strong> http//:onedrive/traslado0001</p>
+              <p><strong> URL con soporte: </strong> http//:onedrive/traslado0001</p>
 
             <h2 class="card-subTitle">DRP *</h2>
             <div class="table-responsive">
