--- a/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-registro-modificacion-contractual/form-registro-modificacion-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-registro-modificacion-contractual/form-registro-modificacion-contractual.component.html
@@ -308,7 +308,7 @@
                 (dataFormulario.get('urlDocumentoSuscrita').invalid && estaEditando)
               "
             >
-              Url con soporte
+              URL con soporte
             </label>
           </div>
           <div class="col d-flex">
