--- a/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-registro-tramite/form-registro-tramite.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-registro-tramite/form-registro-tramite.component.html
@@ -417,7 +417,7 @@
               (dataFormulario.get('rutaDocumento').invalid && estaEditando)
             "
           >
-            Url con soporte
+            URL con soporte
           </label>
         </div>
         <div class="col d-flex">
