--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/verdetalleeditar-traslado-gbftrec/verdetalleeditar-traslado-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/verdetalleeditar-traslado-gbftrec/verdetalleeditar-traslado-gbftrec.component.html
@@ -24,7 +24,7 @@
             <p><em>Se requiere el traslados ya que el aportante Gobernación de Boyacá No cuenta con los recursos
                     necesarios y seran solventados por la Alcaldía de
                     Susacón</em></p>
-            <p><strong>Url con soporte: </strong><em>http//:onedrive/traslado0001</em></p>
+            <p><strong>URL con soporte: </strong><em>http//:onedrive/traslado0001</em></p>
             <h2 class="card-subTitle">DRP</h2>
             <div class="table-responsive">
                 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
