--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-contratacion-registrados/form-contratacion-registrados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-contratacion-registrados/form-contratacion-registrados.component.html
@@ -82,7 +82,7 @@
                   
                 </div>
               </section>
-              <p><b>Url con soporte</b>: {{ form.get( 'rutaDocumento' ).value }} </p>
+              <p><b>URL con soporte</b>: {{ form.get( 'rutaDocumento' ).value }} </p>
             </mat-card-content>
           </mat-card>
         </div>
