--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-tipo-documento/dialog-tipo-documento.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-tipo-documento/dialog-tipo-documento.component.html
@@ -86,7 +86,7 @@
               (addressForm.get('urlSoporte').invalid && estaEditando)
             "
           >
-            Url con soporte
+            URL con soporte
           </label>
         </div>
         <div class="col">
@@ -270,7 +270,7 @@
       Digital
     </p>
     <p>
-      <strong> Url con soporte: </strong>
+      <strong> URL con soporte: </strong>
       {{ addressForm.get('urlSoporte').value }}
     </p>
   </mat-card-content>
