--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/gestionar-solicitud-rlc/gestionar-solicitud-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/gestionar-solicitud-rlc/gestionar-solicitud-rlc.component.html
@@ -88,7 +88,7 @@
                     <p><strong>Observaciones: </strong></p>
                     <i> <div [innerHTML]="addressForm.get( 'observaciones' ).value"></div> </i>
                 </div>
-                <p><strong>Url con soporte documento suscrito: </strong><em> {{ addressForm.get( 'urlSoporte' ).value }} </em></p>
+                <p><strong>URL con soporte documento suscrito: </strong><em> {{ addressForm.get( 'urlSoporte' ).value }} </em></p>
             </mat-card-content>
         </mat-card>
     </ng-container>
@@ -318,7 +318,7 @@
                         <div class="col-md-12">
                             <div class="row">
                                 <div class="pr-1">
-                                    <label class="label-left" for="urlSoporte">Url con soporte documento suscrito</label>
+                                    <label class="label-left" for="urlSoporte">URL con soporte documento suscrito</label>
                                 </div>
                                 <div class="col">
                                     <mat-form-field class="full-width">
