--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/verdetalle-rlc/verdetalle-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/verdetalle-rlc/verdetalle-rlc.component.html
@@ -83,7 +83,7 @@
                 <p><strong>Fecha de firma por parte de la fiduciaria: </strong><em>21/01/2021</em></p>
                 <p><strong>Observaciones: </strong></p>
                 <p><em>1. La fiduciaria se comprometio a enviar firmas el 21 de enero antes del medio día para continuar con el proceso</em></p>
-                <p><strong>Url con soporte documento suscrito: </strong><em>Firmascontrato_N801801.pdf</em></p>
+                <p><strong>URL con soporte documento suscrito: </strong><em>Firmascontrato_N801801.pdf</em></p>
             </mat-card-content>
         </mat-card>
     </div>
