--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/form-acta-entrega-bienes-y-servicios/form-acta-entrega-bienes-y-servicios.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/form-acta-entrega-bienes-y-servicios/form-acta-entrega-bienes-y-servicios.component.html
@@ -68,7 +68,7 @@
               (addressForm.get('actaBienesServicios').invalid && estaEditando)
             "
           >
-          Url con soporte de acta
+          URL con soporte de acta
           </label>
         </div>
         <div class="col">
