--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/detalle-traslados/detalle-traslados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/detalle-traslados/detalle-traslados.component.html
@@ -76,7 +76,7 @@
       </p>
       <p>
         <strong>
-          Url con soporte:
+          URL con soporte:
         </strong>
         http//:onedrive/traslado0001
       </p>
