--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/tabla-informe-anexos/tabla-informe-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/tabla-informe-anexos/tabla-informe-anexos.component.html
@@ -41,7 +41,7 @@
     <!-- ubicacion Column -->
     <ng-container matColumnDef="ubicacion">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Ubicación (url/radicado)
+        Ubicación (URL/radicado)
       </th>
       <td mat-cell *matCellDef="let element">
         <a
