--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/contrato/contratacion/contratacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/contrato/contratacion/contratacion.component.html
@@ -41,7 +41,7 @@
       </p>
       <p>
         <strong>
-          Url con soporte:
+          URL con soporte:
         </strong>
         one.drive.contratación0007
       </p>
