--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/contrato/ejecucion-financiera/ejecucion-financiera.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/contrato/ejecucion-financiera/ejecucion-financiera.component.html
@@ -65,7 +65,7 @@
           </p>
           <p>
             <strong>
-              Url con sporte:
+              URL con sporte:
             </strong>
             http://DDP_0001
           </p>
@@ -79,7 +79,7 @@
                   <th class="mat-header-cell cdk-header-cell ng-star-inserted">Valor adicional</th>
                   <th class="mat-header-cell cdk-header-cell ng-star-inserted">Número de comité</th>
                   <th class="mat-header-cell cdk-header-cell ng-star-inserted">Fecha de comité</th>
-                  <th class="mat-header-cell cdk-header-cell ng-star-inserted">Url con soporte</th>
+                  <th class="mat-header-cell cdk-header-cell ng-star-inserted">URL con soporte</th>
                 </tr>
               </thead>
               <tbody>
@@ -131,7 +131,7 @@
           </p>
           <p>
             <strong>
-              Url con sporte:
+              URL con sporte:
             </strong>
             http://DRP_N801801
           </p>
