--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/contrato/polizas-seguros/polizas-seguros.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/contrato/polizas-seguros/polizas-seguros.component.html
@@ -217,7 +217,7 @@
             <mat-card class="shipping-card var-main-gris">
               <mat-card-header class="header-card header-card--margin">
                 <mat-card-title class="header-card--text">
-                  Url con soporte
+                  URL con soporte
                 </mat-card-title>
               </mat-card-header>
               <mat-card-content>
