--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/contrato/seleccion/seleccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/contrato/seleccion/seleccion.component.html
@@ -87,7 +87,7 @@
       </p>
       <p>
         <strong>
-          Url con soporte:
+          URL con soporte:
         </strong>
         one.drive.procesodeseleccionprivada0007
       </p>
