--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
@@ -122,7 +122,9 @@
               element.estadoCumplimiento !== '0' &&
               (element.estadoCumplimiento === '1' || element.estadoCumplimiento === '4')
             "
-            >ver Detalle/Editar</span
+            >
+            Ver detalle/Editar
+            </span
           ><!--En proceso de validación de cumplimiento-->
         </a>
         <a
