--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-incorporacion-rendimientos/components/aprobar-incorporacion-rendimientos/aprobar-incorporacion-rendimientos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-incorporacion-rendimientos/components/aprobar-incorporacion-rendimientos/aprobar-incorporacion-rendimientos.component.html
@@ -20,11 +20,20 @@
             infraestructura del FFIE.
         </div>
     </div>
+    <div class="busqueda">
+        <mat-form-field appearance="outline" class="busqueda--input">
+          <mat-label>Buscador / Filtro</mat-label>
+          <input matInput #filtro (keyup)="applyFilter($event)" />
+        </mat-form-field>
+        <button mat-button color="primary" class="busqueda--img" (click)="filtro.focus()">
+          <img src="assets/img/icon/lupa.svg" alt="Buscar" />
+        </button>
+      </div>
     <div class="table-responsive">
         <table mat-table [dataSource]="dataSource" matSort matSortActive="fechaCargue"  matSortDirection="desc" class="mat-elevation-z8">
             <ng-container matColumnDef="fechaCargue">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de cargue </th>
-                <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaCargue | date: "dd/MM/yyyy" }}</b> </td>
+                <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaCargue }}</b> </td>
             </ng-container>
             <ng-container matColumnDef="registrosIncorporados">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número total de registros incorporados</th>
