--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-incorporacion-rendimientos/components/dialog-cargar-acta-firmada-air/dialog-cargar-acta-firmada-air.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-incorporacion-rendimientos/components/dialog-cargar-acta-firmada-air/dialog-cargar-acta-firmada-air.component.html
@@ -18,7 +18,7 @@
                             <div class="col-md-12">
                                 <div class="row">
                                     <div class="pr-1">
-                                        <label class="label-left" for="fileName">Url con soporte de acta</label>
+                                        <label class="label-left" for="fileName">URL con soporte de acta</label>
                                     </div>
                                     <div class="col">
                                         <mat-form-field class="full-width">
