--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/gestionar-ddp/gestionar-ddp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/gestionar-ddp/gestionar-ddp.component.html
@@ -134,7 +134,7 @@
                         {{aportante.valorAportanteAlProyecto| currency:'':'symbol':'3.0'}}
                     </p>
                     <p *ngIf="detailavailabilityBudget?.urlConSoporte">
-                        <strong>Url con soporte:</strong>
+                        <strong>URL con soporte:</strong>
                         {{detailavailabilityBudget?.urlConSoporte}}
                     </p>
                     <mat-card-title class="header-card--text sub-text"
