--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-ejfinanciera-gbftrec/tabla-ejfinanciera-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-ejfinanciera-gbftrec/tabla-ejfinanciera-gbftrec.component.html
@@ -13,7 +13,7 @@
         <td *matFooterCellDef align="center" style="border-right: 1px solid; border-bottom: 1px solid;">$105.000.000</td>
       </ng-container>
       <ng-container matColumnDef="ordenadoGirarAntesdeImpuestos">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Facturado antes de impuestos  </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Ordenado a girar antes de impuestos  </th>
         <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.ordenadoGirarAntesdeImpuestos }} </td>
         <td *matFooterCellDef align="center" style="border-right: 1px solid; border-bottom: 1px solid;">$84.100.000</td>
       </ng-container>
