--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/detalle-informe-final-gtlc/detalle-informe-final-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/detalle-informe-final-gtlc/detalle-informe-final-gtlc.component.html
@@ -64,7 +64,7 @@
                             <td mat-cell *matCellDef="let element"> {{element.tipoAnexo}} </td>
                         </ng-container>
                         <ng-container matColumnDef="ubicacion">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Ubicación (url/radicado) </th>
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Ubicación (URL/radicado) </th>
                             <td mat-cell *matCellDef="let element"> <div [innerHtml]="element.ubicacion"></div>  </td>
                         </ng-container>
                         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
