--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-detalle-informe-final/tabla-detalle-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-detalle-informe-final/tabla-detalle-informe-final.component.html
@@ -13,7 +13,7 @@
             <td mat-cell *matCellDef="let element"> {{ element.tipoAnexoString }} </td>
         </ng-container>
         <ng-container matColumnDef="ubicacion">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Ubicación (url/radicado) </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Ubicación (URL/radicado) </th>
             <td mat-cell *matCellDef="let element">
                 <div *ngIf="element.calificacionCodigo === '1'">
                     <!--Físico-->
