--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/verdetalle-edit-gestion-solicitud-rlc/verdetalle-edit-gestion-solicitud-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/verdetalle-edit-gestion-solicitud-rlc/verdetalle-edit-gestion-solicitud-rlc.component.html
@@ -261,7 +261,7 @@
                     <div class="col-md-12">
                         <div class="row">
                             <div class="pr-1">
-                                <label class="label-left" for="urlSoporte">Url con soporte documento suscrito</label>
+                                <label class="label-left" for="urlSoporte">URL con soporte documento suscrito</label>
                             </div>
                             <div class="col">
                                 <mat-form-field class="full-width">
