--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-pagos-rendimientos/components/tabla-registrar-pagos-rpr/tabla-registrar-pagos-rpr.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-pagos-rendimientos/components/tabla-registrar-pagos-rpr/tabla-registrar-pagos-rpr.component.html
@@ -15,6 +15,15 @@
     Cargar nuevo reporte de pagos
   </button>
 </div>
+<div class="busqueda">
+  <mat-form-field appearance="outline" class="busqueda--input">
+    <mat-label>Buscador / Filtro</mat-label>
+    <input matInput #filtro (keyup)="applyFilter($event)" />
+  </mat-form-field>
+  <button mat-button color="primary" class="busqueda--img" (click)="filtro.focus()">
+    <img src="assets/img/icon/lupa.svg" alt="Buscar" />
+  </button>
+</div>
 <div class="table-responsive">
   <table mat-table [dataSource]="dataSource" matSort matSortActive="fechaCargue"  matSortDirection="desc" class="mat-elevation-z8" >
     <ng-container matColumnDef="fechaCargue">
@@ -22,7 +31,7 @@
         Fecha de cargue
       </th>
       <td mat-cell *matCellDef="let element" align="center">
-        <b>{{ element.fechaCargue | date: 'dd/MM/yyyy' }}</b>
+        <b>{{ element.fechaCargue }}</b>
       </td>
     </ng-container>
     <ng-container matColumnDef="totalRegistros">
