--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/detalle-traslados/detalle-traslados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/detalle-traslados/detalle-traslados.component.html
@@ -51,7 +51,7 @@
         </span>
       </p>
       <p>
-        <strong> Url con soporte: </strong>
+        <strong> URL con soporte: </strong>
         http//:onedrive/traslado0001
       </p>
 
