--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/contratacion-p/contratacion-p.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/contratacion-p/contratacion-p.component.html
@@ -104,7 +104,7 @@
                   </p>
                   <p>
                     <strong>
-                      Url con soporte:
+                      URL con soporte:
                     </strong>
                     one.drive.procesodeseleccionprivada0007
                   </p>
@@ -147,7 +147,7 @@
                   </p>
                   <p>
                     <strong>
-                      Url con soporte:
+                      URL con soporte:
                     </strong>
                     one.drive.contratación0007
                   </p>
