--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/preparacion/preparacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/preparacion/preparacion.component.html
@@ -63,7 +63,7 @@
                     <th class="mat-header-cell cdk-header-cell ng-star-inserted">Cantidad de H.V requeridas</th>
                     <th class="mat-header-cell cdk-header-cell ng-star-inserted">Cantidad de H.V recibidas</th>
                     <th class="mat-header-cell cdk-header-cell ng-star-inserted">Cantidad de H.V aprobadas</th>
-                    <th class="mat-header-cell cdk-header-cell ng-star-inserted">Url con soporte</th>
+                    <th class="mat-header-cell cdk-header-cell ng-star-inserted">URL con soporte</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -141,7 +141,7 @@
                       </p>
                       <p>
                         <strong>
-                          Url con soporte:
+                          URL con soporte:
                         </strong>
                         https://drive.google.com/drive/informeinterventoria1
                       </p>
@@ -249,7 +249,7 @@
 
                   <p>
                     <strong>
-                      Url con soporte:
+                      URL con soporte:
                     </strong>
                     https://drive.google.com/drive/PlanesyProgramas123
                   </p>
@@ -287,7 +287,7 @@
                   
                   <p>
                     <strong>
-                      Url con soporte:
+                      URL con soporte:
                     </strong>
                     https://drive.google.com/drive/informeinterventoria1
                   </p>
@@ -436,7 +436,7 @@
                     <th class="mat-header-cell cdk-header-cell ng-star-inserted">Cantidad de H.V requeridas</th>
                     <th class="mat-header-cell cdk-header-cell ng-star-inserted">Cantidad de H.V recibidas</th>
                     <th class="mat-header-cell cdk-header-cell ng-star-inserted">Cantidad de H.V aprobadas</th>
-                    <th class="mat-header-cell cdk-header-cell ng-star-inserted">Url con soporte</th>
+                    <th class="mat-header-cell cdk-header-cell ng-star-inserted">URL con soporte</th>
                   </tr>
                 </thead>
                 <tbody>
