--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-detalle-informe-final-anexos/tabla-detalle-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-detalle-informe-final-anexos/tabla-detalle-informe-final-anexos.component.html
@@ -44,7 +44,7 @@
 
               <!-- Ubicacion Column -->
               <ng-container matColumnDef="Ubicacion">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Ubicación (url/radicado)</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Ubicación (URL/radicado)</th>
                 <td mat-cell *matCellDef="let element">
                   <div
                     *ngIf="element.calificacionCodigo === '1'"
