--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-detalle-informe-anexos/tabla-detalle-informe-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-detalle-informe-anexos/tabla-detalle-informe-anexos.component.html
@@ -56,7 +56,7 @@
               <!-- Ubicacion Column -->
               <ng-container matColumnDef="Ubicacion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                  Ubicación (url/radicado)
+                  Ubicación (URL/radicado)
                 </th>
                 <td mat-cell *matCellDef="let element">
                   <div
