--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/registrar-traslado-gbftrec/registrar-traslado-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/registrar-traslado-gbftrec/registrar-traslado-gbftrec.component.html
@@ -29,7 +29,7 @@
             </p>
               <p><strong> URL con soporte: </strong> http//:onedrive/traslado0001</p>
 
-            <h2 class="card-subTitle">DRP *</h2>
+            <h2 class="card-subTitle">DRP</h2>
             <div class="table-responsive">
                 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
                     <ng-container matColumnDef="drp">
