--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/validar-financ-solicitud-pago/validar-financ-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/validar-financ-solicitud-pago/validar-financ-solicitud-pago.component.html
@@ -27,7 +27,7 @@
     </div>
     <div class="table-responsive">
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-            <ng-container matColumnDef="fechaSolicitud">
+            <ng-container matColumnDef="fechaCreacion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de verificación financiera </th>
                 <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaCreacion }}</b> </td>
             </ng-container>
@@ -35,7 +35,7 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de solicitud </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroSolicitud }} </td>
             </ng-container>
-            <ng-container matColumnDef="modalidadContrato">
+            <ng-container matColumnDef="modalidadNombre">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Modalidad del contrato </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.modalidadNombre }} </td>
             </ng-container>
@@ -43,11 +43,11 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número del contrato </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroContrato }} </td>
             </ng-container>
-            <ng-container matColumnDef="estadoValidacion">
+            <ng-container matColumnDef="estadoCodigo">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la validación </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoCodigo === listaEstadoSolicitudPago.enviarParaValidacionFinanciera ? element.estadoNombre2 : element.estadoNombre }} </td>
             </ng-container>
-            <ng-container matColumnDef="estadoRegistro">
+            <ng-container matColumnDef="registroCompletoValidacionFinanciera">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del registro </th>
                 <td mat-cell *matCellDef="let element" align="center">
                     <span class="info-text info-text__table"
