--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-valor-total-og-gbftrec/tabla-valor-total-og-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-valor-total-og-gbftrec/tabla-valor-total-og-gbftrec.component.html
@@ -10,23 +10,23 @@
         </ng-container>
         <ng-container matColumnDef="facturado">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Facturado </th>
-            <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.facturado | currency: '':'symbol-narrow':'.0-0' }}</b> </td>
+            <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.facturado }}</b> </td>
         </ng-container>
         <ng-container matColumnDef="ansAplicado">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> ANS aplicado </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.ansAplicado | currency: '':'symbol-narrow':'.0-0' }} </td>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element.ansAplicado }} </td>
         </ng-container>
         <ng-container matColumnDef="reteGarantiaAPagar">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Rete garantía a pagar </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.reteGarantia | currency: '':'symbol-narrow':'.0-0' }} </td>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element.reteGarantia }} </td>
         </ng-container>
         <ng-container matColumnDef="otrosDescuentos">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Otros descuentos </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.otrosDescuentos | currency: '':'symbol-narrow':'.0-0' }} </td>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element.otrosDescuentos }} </td>
         </ng-container>
         <ng-container matColumnDef="aPagarAntesImpuestos">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> A pagar antes de impuestos </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.apagarAntesImpuestos | currency: '':'symbol-narrow':'.0-0' }} </td>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element.apagarAntesImpuestos }} </td>
         </ng-container>
         <ng-container matColumnDef="gestion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
